[package]
name = "mux-webhook-worker"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
description = "Cloudflare Worker which listens for mux video upload events"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/mux-webhook-worker"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
hex= "0.4.3"
hmac = "0.12.0"
nom = "7.1.0"
reqwest = { version = "0.11.10", features = ["json"]}
serde = "1.0.136"
sha2 = "0.10"
worker = "0.0.9"
serde_json = "1.0.79"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
httptest = "0.15"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
